# PalSavTools

./: .gitignore  .gitmodules  AGENTS.md  FIX_SUMMARY.md  LICENSE  README.md  ROUND_TRIP_ANALYSIS.md  TREEMAP_FIX.md  TREEMAP_REFACTOR.md  Todo.md  analyze_group_binary.py  analyze_group_structure.py  check_id_types.py  check_unmapped_ids.py  group_format_guide.py  installer.nsi  license  pal_raw_export_craft_palbox.json  pal_raw_export_palbox.json  pal_raw_export_party.json  pst.windows.iss  pyproject.toml  pytest.ini  requirements.txt  setup_freeze.py  start.cmd  start.py  start.sh  start_web.cmd  test_dynamics.py  test_dynamics2.py  test_dynamics3.py  test_dynamics4.py  test_group_fix.py  test_wtffix.py
.github/workflows/: build.yml  ci.yml  release.yml
.opencode/: opencode.jsonc
PST.Bootstrapper/: App.axaml.cs  PST.Bootstrapper.csproj  Program.cs
PalworldSaveTools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py
app/backend/: app.py  (+6 more)
build_specs/: build.py  pst.spec
scripts/: add_translation_keys.cmd  add_translation_keys.py  auto_update.cmd  auto_update.py  build.py  build_all.cmd  build_cx.cmd  build_cx.py  build_linux.cmd  build_mac.cmd  build_windows_portable.cmd  build_windows_setup.cmd  clean_code.cmd  clear_fog.cmd  clear_fog.py  extract_breeding_meta.py  restructure_tab_guide.py  run_fast_update.py  scan_ft_guids.cmd  scan_ft_guids.py  translate_readme.cmd  translate_tab_guide.cmd  update_game_data.cmd  update_game_data.py  update_translation_keys.cmd
src/: bootup.py  common.py  import_libs.py  loading_manager.py  main.py  palobject.py  resource_resolver.py
tests/: conftest.py  test_palsav_rs_integration.py  test_player_endpoints.py  test_tool_roundtrips.py
(+587 files in other folders)
