[build-system]
requires = ["setuptools>=75.6.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "PalworldSaveTools"
version="2.0.0"
description = "All-in-one tool for fixing/transferring/editing Palworld saves"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "Pylar" }]
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "nerdfont",
    "packaging",
    "brotli",
    "cbor2",
    "msgpack",
    "zstandard",
    "orjson",
    "py7zr",
    "nuitka>=4.1.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

# NOTE: the Python `palsav` submodule has been superseded by `palsav-rs`
# (Rust). Save serialization now goes through the `uesave` binary via
# app/backend/services/palsav_rs_wrapper.py. The [tool.uv.workspace] /
# [tool.uv.sources] entries for PalSav were removed when src/palsav was
# dropped. See AGENTS.md "palsav-rs integration" notes.

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.pyright]
reportAttributeAccessIssue = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# importlib mode avoids importing parent package __init__.py files during
# collection — important because src/palworld_aio/__init__.py eagerly imports
# main.py which pulls Qt/i18n deps unavailable in a headless test env. The
# breeding engine itself is loaded via importlib in conftest.py (mirroring how
# the backend loads it), so it stays fully decoupled.
addopts = "--import-mode=importlib"
testpaths = ["tests/breeding"]
pythonpath = ["."]


